Revert "替换脚本"
This reverts commit e1f38ea9